--- a/CommentForm/Views/CommentForm/Index.cshtml
+++ b/CommentForm/Views/CommentForm/Index.cshtml
@@ -1,45 +1,63 @@
 ﻿@model IEnumerable<CommentForm.Models.CommentFormModel>
 
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Priority)
-        </th>
-        <th></th>
-    </tr>
+<div class="row">
+	@foreach (var item in Model)
+	{
+		<div class="col-md-4">
+			<div class="thumbnail">
+				<div class="caption">
+					<h3>@Html.DisplayFor(modelItem => item.Name)</h3>
+					<p>@Html.DisplayFor(modelItem => item.Comment)</p>
+					<p><span class="label label-default">@Html.DisplayNameFor(model => model.Priority):</span>&nbsp;<strong>@Html.DisplayFor(modelItem => item.Priority)</strong></p>
+					<p>@Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-primary", role="button" })</p>
+					
+				</div>
+			</div>
+		</div>
+	}
+</div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Priority)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+@*<p>
+		@Html.ActionLink("Create New", "Create")
+	</p>
 
-</table>
+	<table class="table">
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Name)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Comment)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Priority)
+			</th>
+			<th></th>
+		</tr>
+
+	@foreach (var item in Model) {
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Name)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Comment)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Priority)
+			</td>
+			<td>
+				@Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
+				@Html.ActionLink("Details", "Details", new { id=item.ID }) |
+				@Html.ActionLink("Delete", "Delete", new { id=item.ID })
+			</td>
+		</tr>
+	}
+
+	</table>*@
